# app/Http/Controllers/Auth/AuthenticatedSessionController.php
@@ -22,7 +22,10 @@ class AuthenticatedSessionController extends Controller
         tags: ["Authentication"]
     )]
     #[OA\RequestBody(required: true, content: new OA\JsonContent(ref: "#/components/schemas/LoginRequest"))]
-    #[OA\Response(response: 200, description: "OK", content: new OA\MediaType('application/json'))]
+    #[OA\Response(response: 204, description: "No content", content: new OA\MediaType('application/json'))]
+    #[OA\Header(header: "Set-Cookie", schema: new OA\Schema(
+        type: "string",
+        example: "laravel_session=0%3D; expires=Wed, 12 Feb 2025 21:56:44 GMT; Max-Age=7200; httponly; samesite=lax"))]
     public function store(LoginRequest $request): Response
     {
         $request->authenticate();
@@ -39,6 +42,7 @@ class AuthenticatedSessionController extends Controller
         path: "/logout",
         operationId: "logout",
         summary: "Log out",
+        security: ["laravel_session"],
         tags: ["Authentication"]
     )]
     #[OA\Response(response: 204, description: "Session destroyed", content: new OA\MediaType('application/json'))]
