# app/Http/Controllers/Controller.php
@@ -6,7 +6,7 @@ use OpenApi\Attributes as OA;
 use phpDocumentor\Reflection\DocBlock\Tags\Property;
 
 #[OA\Info(version: "0.0", title: "Petstore API")]
-#[OA\SecurityScheme(securityScheme: "bearer", type: "http", description: "Bearer token", name: "bearer", scheme: "bearer")]
+#[OA\SecurityScheme(securityScheme: "cookie", type: "apiKey", name: 'laravel_session', in: "cookie")]
 #[OA\Schema(schema: "PageMeta", required: ["current_page", "from", "last_page", "path", "per_page", "to", "total"], properties: [
     new OA\Property(property: "current_page", description: "Index of the current page. Indexed from 1.", type: "integer", example: 1),
     new OA\Property(property: "from", description: "Index of the first item of the page among all items. Equal to (page * per_page) + 1.", type: "integer", example: 6),
