# app/Http/Requests/StoreAnimalRequest.php
@@ -1,0 +1,40 @@
+<?php
+
+namespace App\Http\Requests;
+
+use App\Models\User;
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Log;
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: "StoreAnimalRequest",
+    required: ["name"],
+    properties: [
+        new OA\Property(property: "name", type: "string", maxLength: 255, example: "Dog", nullable: false),
+    ]
+)]
+class StoreAnimalRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return Auth::user()->hasPermissionTo("add animal");
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            "name" => "required|unique:animals,name|max:255",
+        ];
+    }
+}
